# moonlet

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  TODO.md  flake.nix
.githooks/: pre-commit
.moss/: index.sqlite
crates/integrations/spore-llm/: Cargo.toml
crates/integrations/spore-llm/src/: lib.rs
crates/integrations/spore-lotus/: Cargo.toml
crates/integrations/spore-lotus/src/: lib.rs
crates/integrations/spore-moss/: Cargo.toml
crates/integrations/spore-moss-packages/: Cargo.toml
crates/integrations/spore-moss-packages/src/: lib.rs
crates/integrations/spore-moss-sessions/: Cargo.toml
crates/integrations/spore-moss-sessions/src/: lib.rs
crates/integrations/spore-moss-tools/: Cargo.toml
crates/integrations/spore-moss-tools/src/: lib.rs
crates/integrations/spore-moss/src/: lib.rs
crates/moonlet/: Cargo.toml
crates/moonlet-core/: Cargo.toml
crates/moonlet-core/src/: lib.rs  memory.rs
crates/moonlet-lua/: Cargo.toml
crates/moonlet-lua/src/: handle.rs  lib.rs  plugin.rs
crates/moonlet/src/: main.rs
crates/plugins/moonlet-ecosystems/: Cargo.toml
crates/plugins/moonlet-ecosystems/src/: lib.rs
crates/plugins/moonlet-embed/: Cargo.toml
crates/plugins/moonlet-embed/src/: lib.rs
crates/plugins/moonlet-fs/: Cargo.toml
crates/plugins/moonlet-fs/src/: lib.rs
crates/plugins/moonlet-libsql/: Cargo.toml
crates/plugins/moonlet-libsql/src/: lib.rs
crates/plugins/moonlet-llm/: Cargo.toml
crates/plugins/moonlet-llm/src/: lib.rs
crates/plugins/moonlet-moss/: Cargo.toml
crates/plugins/moonlet-moss/src/: lib.rs
crates/plugins/moonlet-normalize/: Cargo.toml
crates/plugins/moonlet-normalize/src/: lib.rs
crates/plugins/moonlet-package-index/: Cargo.toml
crates/plugins/moonlet-package-index/src/: lib.rs
crates/plugins/moonlet-packages/: Cargo.toml
crates/plugins/moonlet-packages/src/: lib.rs
crates/plugins/moonlet-sessions/: Cargo.toml
crates/plugins/moonlet-sessions/src/: lib.rs
crates/plugins/moonlet-tools/: Cargo.toml
crates/plugins/moonlet-tools/src/: lib.rs
crates/plugins/spore-embed/: Cargo.toml
crates/plugins/spore-embed/src/: lib.rs
crates/plugins/spore-fs/: Cargo.toml
crates/plugins/spore-fs/src/: lib.rs
crates/plugins/spore-libsql/: Cargo.toml
crates/plugins/spore-libsql/src/: lib.rs
crates/plugins/spore-llm/: Cargo.toml
crates/plugins/spore-llm/src/: lib.rs
crates/plugins/spore-moss/: Cargo.toml
crates/plugins/spore-moss/src/: lib.rs
crates/plugins/spore-packages/: Cargo.toml
crates/plugins/spore-packages/src/: lib.rs
crates/plugins/spore-sessions/: Cargo.toml
crates/plugins/spore-sessions/src/: lib.rs
crates/plugins/spore-tools/: Cargo.toml
crates/plugins/spore-tools/src/: lib.rs
crates/spore/: Cargo.toml
crates/spore-core/: Cargo.toml
crates/spore-core/src/: lib.rs  llm.rs  memory.rs
crates/spore-lua/: Cargo.toml
crates/spore-lua/src/: handle.rs  lib.rs  plugin.rs
crates/spore-sessions/: Cargo.toml
crates/spore-sessions/src/: lib.rs
crates/spore-sessions/src/formats/: mod.rs
crates/spore/src/: main.rs
docs/: index.md  introduction.md  package.json
docs/.vitepress/: config.ts
docs/design/: moss-integrations.md  plugin-architecture.md
