[workspace]
resolver = "2"
members = ["crates/spore", "crates/spore-core", "crates/spore-lua", "crates/plugins/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rhizome-lab/spore"

[workspace.dependencies]
# Internal crates
rhizome-spore = { path = "crates/spore" }
rhizome-spore-core = { path = "crates/spore-core" }
rhizome-spore-lua = { path = "crates/spore-lua" }

# Plugins (dynamically loaded C ABI)
rhizome-spore-fs = { path = "crates/plugins/spore-fs" }
rhizome-spore-llm = { path = "crates/plugins/spore-llm" }
rhizome-spore-moss = { path = "crates/plugins/spore-moss" }
rhizome-spore-sessions = { path = "crates/plugins/spore-sessions" }
rhizome-spore-tools = { path = "crates/plugins/spore-tools" }
rhizome-spore-packages = { path = "crates/plugins/spore-packages" }

# Pith interfaces
rhizome-pith-io = { git = "https://github.com/rhizome-lab/pith" }
rhizome-pith-filesystem = { git = "https://github.com/rhizome-lab/pith" }

# External dependencies
libloading = "0.8"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["rustls-tls", "json"] }
libsql = "0.9"
mlua = { version = "0.10", features = ["luajit", "vendored", "serialize", "send", "async"] }
rig-core = "0.27"
dotenvy = "0.15"
clap = { version = "4", features = ["derive"] }
dirs = "6"
toml = "0.8"
schemars = "0.8"
