[workspace]
resolver = "2"
members = ["crates/moonlet", "crates/moonlet-core", "crates/moonlet-lua", "crates/plugins/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rhi-zone/moonlet"

[workspace.dependencies]
# Internal crates
moonlet = { path = "crates/moonlet" }
moonlet-core = { path = "crates/moonlet-core" }
moonlet-lua = { path = "crates/moonlet-lua" }

# Plugins (dynamically loaded C ABI)
moonlet-fs = { path = "crates/plugins/moonlet-fs" }
moonlet-llm = { path = "crates/plugins/moonlet-llm" }
moonlet-normalize = { path = "crates/plugins/moonlet-normalize" }
moonlet-sessions = { path = "crates/plugins/moonlet-sessions" }
moonlet-tools = { path = "crates/plugins/moonlet-tools" }
moonlet-packages = { path = "crates/plugins/moonlet-packages" }
moonlet-embed = { path = "crates/plugins/moonlet-embed" }
moonlet-libsql = { path = "crates/plugins/moonlet-libsql" }

# Pith interfaces
portals-io = { git = "https://github.com/rhi-zone/portals" }
portals-filesystem = { git = "https://github.com/rhi-zone/portals" }

# External dependencies
libloading = "0.8"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["rustls-tls", "json"] }
libsql = "0.9"
mlua = { version = "0.10", features = ["luajit", "vendored", "serialize", "send", "async"] }
rig-core = "0.27"
dotenvy = "0.15"
clap = { version = "4", features = ["derive"] }
dirs = "6"
toml = "0.8"
schemars = "0.8"
