[package]
name = "moonlet-core"
description = "Core agentic AI infrastructure: memory store"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror.workspace = true
libsql.workspace = true
tokio.workspace = true
dotenvy.workspace = true

[dev-dependencies]
tempfile = "3"
