[package]
name = "moonlet"
description = "CLI for moonlet Lua runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "moonlet"
path = "src/main.rs"

[dependencies]
moonlet-lua.workspace = true
mlua.workspace = true
tokio.workspace = true
serde.workspace = true
clap.workspace = true
toml.workspace = true
schemars.workspace = true
serde_json.workspace = true
