[package]
name = "rhizome-spore-lua"
description = "Lua runtime for spore agents"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rhizome-spore-core.workspace = true
mlua.workspace = true
libloading.workspace = true
dirs.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
