[package]
name = "rhizome-spore"
description = "CLI for spore Lua runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "spore"
path = "src/main.rs"

[dependencies]
rhizome-spore-lua.workspace = true
rhizome-spore-llm.workspace = true
rhizome-spore-moss.workspace = true
rhizome-spore-moss-sessions.workspace = true
rhizome-spore-moss-tools.workspace = true
rhizome-spore-moss-packages.workspace = true
mlua.workspace = true
tokio.workspace = true
serde.workspace = true
clap.workspace = true
toml.workspace = true
schemars.workspace = true
serde_json.workspace = true
