[package]
name = "rhizome-spore"
description = "CLI for spore Lua runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "spore"
path = "src/main.rs"

[dependencies]
rhizome-spore-lua.workspace = true
mlua.workspace = true
tokio.workspace = true
serde.workspace = true
clap.workspace = true
toml.workspace = true
schemars.workspace = true
serde_json.workspace = true
