[package]
name = "rhizome-spore-llm"
description = "LLM integration for spore agents"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rhizome-spore-lua.workspace = true
mlua.workspace = true
rig-core.workspace = true
reqwest.workspace = true
tokio.workspace = true
dotenvy.workspace = true

[dev-dependencies]
