[package]
name = "rhizome-spore-lotus"
description = "Lotus world integration for spore agents"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rhizome-spore-lua.workspace = true
rhizome-lotus-core = { path = "../../../../lotus/crates/lotus-core" }
rhizome-lotus-ir = { path = "../../../../lotus/crates/lotus-ir" }
rhizome-reed-sexpr = { path = "../../../../reed/crates/reed-sexpr" }
rhizome-reed-write-lua = { path = "../../../../reed/crates/writers/reed-write-lua" }
mlua.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
