[package]
name = "rhizome-spore-lotus"
description = "Lotus world integration for spore agents"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rhizome-spore-lua.workspace = true
rhizome-lotus-core = { git = "https://github.com/rhizome-lab/lotus" }
rhizome-lotus-ir = { git = "https://github.com/rhizome-lab/lotus" }
rhizome-reed-sexpr = { git = "https://github.com/rhizome-lab/reed" }
rhizome-reed-write-lua = { git = "https://github.com/rhizome-lab/reed" }
mlua.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
