[package]
name = "rhizome-spore-moss-packages"
description = "Moss packages integration for spore - ecosystem queries and package index lookups"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rhizome-spore-lua.workspace = true
rhizome-moss-packages = { git = "https://github.com/rhizome-lab/moss", features = ["ecosystem", "index"] }
mlua.workspace = true
serde_json.workspace = true
