[package]
name = "rhizome-spore-moss-sessions"
description = "Moss sessions integration for spore agents"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rhizome-spore-lua.workspace = true
rhizome-moss-sessions = { git = "https://github.com/rhizome-lab/moss" }
mlua.workspace = true
serde_json.workspace = true
