[package]
name = "rhizome-spore-moss-tools"
description = "Moss tools integration for spore - linters, formatters, type checkers, test runners"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rhizome-spore-lua.workspace = true
rhizome-moss-tools = { git = "https://github.com/rhizome-lab/moss" }
mlua.workspace = true
serde_json.workspace = true
