[package]
name = "moonlet-ecosystems"
description = "Package ecosystem plugin for moonlet - ecosystem queries and auditing"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
mlua = { version = "0.10", features = ["luajit", "vendored"], default-features = false }
normalize-ecosystems = "0.1.0"
