[package]
name = "moonlet-libsql"
description = "LibSQL/SQLite plugin for moonlet with vector support"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
mlua = { version = "0.10", features = ["luajit", "vendored"], default-features = false }
serde_json = "1"
tokio.workspace = true
libsql.workspace = true
