[package]
name = "moonlet-moss"
description = "Code intelligence plugin for moonlet - view, search, analyze, edit"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
mlua = { version = "0.10", features = ["luajit", "vendored"], default-features = false }
serde_json = "1"
normalize = { git = "https://github.com/rhi-zone/normalize" }
normalize-languages = { git = "https://github.com/rhi-zone/normalize" }
