[package]
name = "moonlet-package-index"
description = "Package index plugin for moonlet - registry metadata lookups"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
mlua = { version = "0.10", features = ["luajit", "vendored"], default-features = false }
normalize-package-index = "0.1.0"
