[package]
name = "moonlet-packages"
description = "Package ecosystem plugin for moonlet - ecosystem queries and package index lookups"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
mlua = { version = "0.10", features = ["luajit", "vendored"], default-features = false }
serde_json = "1"
normalize-packages = { git = "https://github.com/rhi-zone/normalize", features = ["ecosystem", "index"] }
