[package]
name = "moonlet-sessions"
description = "Session parsing plugin for moonlet"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
mlua = { version = "0.10", features = ["luajit", "vendored"], default-features = false }
serde_json = "1"
normalize-sessions = { git = "https://github.com/rhi-zone/normalize" }
