[package]
name = "moonlet-tools"
description = "Development tools plugin for moonlet - linters, formatters, type checkers, test runners"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
mlua = { version = "0.10", features = ["luajit", "vendored"], default-features = false }
serde_json = "1"
normalize-tools = { git = "https://github.com/rhi-zone/normalize" }
moonlet-lua = { path = "../../moonlet-lua" }
