[package]
name = "rhizome-spore-embed"
description = "Embedding generation plugin for spore - multi-provider vector embeddings"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
mlua = { version = "0.10", features = ["luajit", "vendored"], default-features = false }
serde_json = "1"
tokio.workspace = true
reqwest.workspace = true
rig-core.workspace = true
rhizome-spore-lua = { path = "../../spore-lua" }
