[package]
name = "rhizome-spore-moss"
description = "Code intelligence plugin for spore - view, search, analyze, edit"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
mlua = { version = "0.10", features = ["luajit", "vendored"], default-features = false }
serde_json = "1"
rhizome-moss = { git = "https://github.com/rhizome-lab/moss" }
rhizome-moss-languages = { git = "https://github.com/rhizome-lab/moss" }
